--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -96,6 +96,12 @@ chart_apps:
   konghq:
     enabled: false
     values: |
+      global:
+        company: {{ .Values.company | toYaml | nindent 6 }}
+        registry: {{ .Values.registry | toYaml | nindent 6 }}
+        bucket: {{ .Values.bucket | toYaml | nindent 6 }}
+        network: {{ .Values.network | toYaml | nindent 6 }}
+        env: {{ .Values.env | toYaml | nindent 6 }}
       kong:
         proxy:
           annotations:
