--- a/charts/chart_deps/security/certificates/templates/cluster_issuers.yaml
+++ b/charts/chart_deps/security/certificates/templates/cluster_issuers.yaml
@@ -4,7 +4,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: {{ or ($cluster_issuer_obj.name) ($cluster_issuer_name) }}
+  name: {{ tpl ( or ( $cluster_issuer_obj.name ) ($cluster_issuer_name)) $ }}
 spec:
   {{- if $cluster_issuer_obj.selfSigned }}
   selfSigned: {}
