Feature cluste issuer chart dep (#43)
* cert-manager: use certificates subchart to create cluster_issuers

* * `chart_deps/security/certificates`:
    * ability to create `ClusterIssuers`
    * ability to create `Issuers`
    * `certs` are now dict

* konghq: interface for creating `Issuer` and `Certificate` objs for webhooks have changed to using `certificates` chart in `chart_deps`

* `chart_deps/konghq/plugins`: use templates in plugin names

* `all charts`: new global attr `ingress.class`

* konghq: cluster issuer name includes ingress class

* environment: global vars for konghq

* `chart_deps/app/common`:  annotations can now use templates

* `chart_deps/app/common`: fix tpl for annotations

* `chart_deps/security/certificates`: use tpl function to render obj names

* `konghq`: letsencrypt private key name based on ingressClass

* `konghq`: fix dns names for webhook cert

--- a/charts/chart_deps/security/certificates/templates/certificates.yaml
+++ b/charts/chart_deps/security/certificates/templates/certificates.yaml
@@ -1,19 +1,23 @@
-{{- range $cert_obj := .Values.certs -}}
+{{- range $cert_name, $cert_obj := .Values.certs -}}
+{{- if $cert_obj.enabled }}
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ $cert_obj.name }}
-  namespace: {{ $cert_obj.namespace }}
+  name: {{ tpl ( or ($cert_obj.name) ($cert_name)) $ }}
 spec:
   secretName: {{ $cert_obj.secretName }}
+  {{- if $cert_obj.commonName }}
+  commonName: {{ tpl ($cert_obj.commonName) $ }}
+  {{- end }}
   renewBefore: {{ or ($cert_obj.renewBefore) ($.Values.renewBefore)}}
   {{- with $cert_obj.dnsNames }}
   dnsNames:
-  {{- toYaml . | nindent 4 }}
+  {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
   issuerRef:
   {{- range $key, $value := $cert_obj.issuerRef }}
     {{ $key }}: {{ tpl $value $ | quote }}
   {{- end }}
 {{ end -}}
+{{- end }}
