--- a/charts/cert-manager/values.yaml
+++ b/charts/cert-manager/values.yaml
@@ -11,12 +11,12 @@ global:
   bucket:
     prefix:
     suffix:
+  ingress:
+    class: konghq
   env:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
-
-cluster_issuers: {}
 
 certificates:
   enabled: false
