--- a/charts/gha-runner/Chart.yaml
+++ b/charts/gha-runner/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
-name: gha-runner-scale-set
+name: gha-runner
 version: 0.1.0
 dependencies:
   #https://github.com/actions/actions-runner-controller/tree/gha-runner-scale-set-0.9.3/charts/gha-runner-scale-set
   - name: gha-runner-scale-set
     version: 0.9.3
     repository: oci://ghcr.io/actions/actions-runner-controller-charts
-    alias: gha-runner-scale-set
-    condition: gha-runner-scale-set.enabled
+    alias: gha-runner
+    condition: gha-runner.enabled
