add disableGlobalEnvironment:false test

--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -17,6 +17,8 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+disableGlobalEnvironment: false
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
