--- a/crds/grafana-operator/v5.17.0.grafana.integreatly.org_grafanafolders.yaml
+++ b/crds/grafana-operator/v5.17.0.grafana.integreatly.org_grafanafolders.yaml
@@ -4,23 +4,33 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafanacontactpoints.grafana.integreatly.org
+  name: grafanafolders.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaContactPoint
-    listKind: GrafanaContactPointList
-    plural: grafanacontactpoints
-    singular: grafanacontactpoint
+    kind: GrafanaFolder
+    listKind: GrafanaFolderList
+    plural: grafanafolders
+    singular: grafanafolder
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - jsonPath: .status.NoMatchingInstances
+      name: No matching instances
+      type: boolean
+    - format: date-time
+      jsonPath: .status.lastResync
+      name: Last resync
+      type: date
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaContactPoint is the Schema for the grafanacontactpoints
-          API
+        description: GrafanaFolder is the Schema for the grafanafolders API
         properties:
           apiVersion:
             description: |-
@@ -40,14 +50,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaContactPointSpec defines the desired state of GrafanaContactPoint
+            description: GrafanaFolderSpec defines the desired state of GrafanaFolder
             properties:
               allowCrossNamespaceImport:
-                type: boolean
-              disableResolveMessage:
+                default: false
+                description: Allow the Operator to match this resource with Grafanas
+                  outside the current namespace
                 type: boolean
               instanceSelector:
-                description: selects Grafanas for import
+                description: Selects Grafana instances for import
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -93,114 +104,64 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
                 x-kubernetes-validations:
-                - message: Value is immutable
+                - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              name:
+              parentFolderRef:
+                description: Reference to an existing GrafanaFolder CR in the same
+                  namespace
+                type: string
+              parentFolderUID:
+                description: UID of the folder in which the current folder should
+                  be created
+                type: string
+              permissions:
+                description: Raw json with folder permissions, potentially exported
+                  from Grafana
                 type: string
               resyncPeriod:
-                default: 10m
+                default: 10m0s
+                description: How often the resource is synced, defaults to 10m0s if
+                  not set
                 format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              settings:
-                x-kubernetes-preserve-unknown-fields: true
-              type:
-                enum:
-                - alertmanager
-                - prometheus-alertmanager
-                - dingding
-                - discord
-                - email
-                - googlechat
-                - kafka
-                - line
-                - opsgenie
-                - pagerduty
-                - pushover
-                - sensugo
-                - sensu
-                - slack
-                - teams
-                - telegram
-                - threema
-                - victorops
-                - webhook
-                - wecom
-                - hipchat
-                - oncall
+              title:
+                description: Display name of the folder in Grafana
                 type: string
-              valuesFrom:
-                items:
-                  properties:
-                    targetPath:
-                      type: string
-                    valueFrom:
-                      properties:
-                        configMapKeyRef:
-                          description: Selects a key of a ConfigMap.
-                          properties:
-                            key:
-                              description: The key to select.
-                              type: string
-                            name:
-                              default: ""
-                              description: |-
-                                Name of the referent.
-                                This field is effectively required, but due to backwards compatibility is
-                                allowed to be empty. Instances of this type with an empty value here are
-                                almost certainly wrong.
-                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              type: string
-                            optional:
-                              description: Specify whether the ConfigMap or its key
-                                must be defined
-                              type: boolean
-                          required:
-                          - key
-                          type: object
-                          x-kubernetes-map-type: atomic
-                        secretKeyRef:
-                          description: Selects a key of a Secret.
-                          properties:
-                            key:
-                              description: The key of the secret to select from.  Must
-                                be a valid secret key.
-                              type: string
-                            name:
-                              default: ""
-                              description: |-
-                                Name of the referent.
-                                This field is effectively required, but due to backwards compatibility is
-                                allowed to be empty. Instances of this type with an empty value here are
-                                almost certainly wrong.
-                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              type: string
-                            optional:
-                              description: Specify whether the Secret or its key must
-                                be defined
-                              type: boolean
-                          required:
-                          - key
-                          type: object
-                          x-kubernetes-map-type: atomic
-                      type: object
-                  required:
-                  - targetPath
-                  - valueFrom
-                  type: object
-                type: array
+              uid:
+                description: Manually specify the UID the Folder is created with.
+                  Can be any string consisting of alphanumeric characters, - and _
+                  with a maximum length of 40
+                maxLength: 40
+                pattern: ^[a-zA-Z0-9-_]+$
+                type: string
+                x-kubernetes-validations:
+                - message: spec.uid is immutable
+                  rule: self == oldSelf
             required:
             - instanceSelector
-            - name
-            - settings
             type: object
+            x-kubernetes-validations:
+            - message: Only one of parentFolderUID or parentFolderRef can be set
+              rule: (has(self.parentFolderUID) && !(has(self.parentFolderRef))) ||
+                (has(self.parentFolderRef) && !(has(self.parentFolderUID))) || !(has(self.parentFolderRef)
+                && (has(self.parentFolderUID)))
+            - message: spec.uid is immutable
+              rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
+                has(self.uid)))
+            - message: disabling spec.allowCrossNamespaceImport requires a recreate
+                to ensure desired state
+              rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
+                && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaContactPointStatus defines the observed state of GrafanaContactPoint
+            description: GrafanaFolderStatus defines the observed state of GrafanaFolder
             properties:
+              NoMatchingInstances:
+                description: The folder instanceSelector can't find matching grafana
+                  instances
+                type: boolean
               conditions:
-                description: |-
-                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
+                description: Results when synchonizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -256,9 +217,16 @@ spec:
                   - type
                   type: object
                 type: array
-            required:
-            - conditions
+              hash:
+                type: string
+              lastResync:
+                description: Last time the resource was synchronized with Grafana
+                  instances
+                format: date-time
+                type: string
             type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
