--- a/crds/grafana-operator/v5.17.0.grafana.integreatly.org_grafanalibrarypanels.yaml
+++ b/crds/grafana-operator/v5.17.0.grafana.integreatly.org_grafanalibrarypanels.yaml
@@ -4,22 +4,19 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafanadashboards.grafana.integreatly.org
+  name: grafanalibrarypanels.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaDashboard
-    listKind: GrafanaDashboardList
-    plural: grafanadashboards
-    singular: grafanadashboard
+    kind: GrafanaLibraryPanel
+    listKind: GrafanaLibraryPanelList
+    plural: grafanalibrarypanels
+    singular: grafanalibrarypanel
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.NoMatchingInstances
-      name: No matching instances
-      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -30,7 +27,8 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaDashboard is the Schema for the grafanadashboards API
+        description: GrafanaLibraryPanel is the Schema for the grafanalibrarypanels
+          API
         properties:
           apiVersion:
             description: |-
@@ -50,14 +48,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaDashboardSpec defines the desired state of GrafanaDashboard
+            description: GrafanaLibraryPanelSpec defines the desired state of GrafanaLibraryPanel
             properties:
               allowCrossNamespaceImport:
-                description: allow to import this resources from an operator in a
-                  different namespace
+                default: false
+                description: Allow the Operator to match this resource with Grafanas
+                  outside the current namespace
                 type: boolean
               configMapRef:
-                description: dashboard from configmap
+                description: model from configmap
                 properties:
                   key:
                     description: The key to select.
@@ -80,11 +79,14 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               contentCacheDuration:
-                description: Cache duration for dashboards fetched from URLs
+                description: Cache duration for models fetched from URLs
                 type: string
               datasources:
                 description: maps required data sources to existing ones
                 items:
+                  description: |-
+                    GrafanaResourceDatasource is used to set the datasource name of any templated datasources in
+                    content definitions (e.g., dashboard JSON).
                   properties:
                     datasourceName:
                       type: string
@@ -155,7 +157,7 @@ spec:
                     name:
                       type: string
                     value:
-                      description: Inline evn value
+                      description: Inline env value
                       type: string
                     valueFrom:
                       description: Reference on value source, might be the reference
@@ -213,9 +215,6 @@ spec:
                   - name
                   type: object
                 type: array
-              folder:
-                description: folder assignment for dashboard
-                type: string
               folderRef:
                 description: Name of a `GrafanaFolder` resource in the same namespace
                 type: string
@@ -233,12 +232,12 @@ spec:
                 - id
                 type: object
               gzipJson:
-                description: GzipJson the dashboard's JSON compressed with Gzip. Base64-encoded
+                description: GzipJson the model's JSON compressed with Gzip. Base64-encoded
                   when in YAML.
                 format: byte
                 type: string
               instanceSelector:
-                description: selects Grafanas for import
+                description: Selects Grafana instances for import
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -284,10 +283,10 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
                 x-kubernetes-validations:
-                - message: Value is immutable
+                - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
               json:
-                description: dashboard json
+                description: model json
                 type: string
               jsonnet:
                 description: Jsonnet
@@ -322,17 +321,27 @@ spec:
                   type: object
                 type: array
               resyncPeriod:
-                default: 5m
-                description: how often the dashboard is refreshed, defaults to 5m
-                  if not set
+                default: 10m0s
+                description: How often the resource is synced, defaults to 10m0s if
+                  not set
                 format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
+              uid:
+                description: |-
+                  Manually specify the uid, overwrites uids already present in the json model.
+                  Can be any string consisting of alphanumeric characters, - and _ with a maximum length of 40.
+                maxLength: 40
+                pattern: ^[a-zA-Z0-9-_]+$
+                type: string
+                x-kubernetes-validations:
+                - message: spec.uid is immutable
+                  rule: self == oldSelf
               url:
-                description: dashboard url
+                description: model url
                 type: string
               urlAuthorization:
-                description: authorization options for dashboard from url
+                description: authorization options for model from url
                 properties:
                   basicAuth:
                     properties:
@@ -394,18 +403,18 @@ spec:
                 time
               rule: (has(self.folderUID) && !(has(self.folderRef))) || (has(self.folderRef)
                 && !(has(self.folderUID))) || !(has(self.folderRef) && (has(self.folderUID)))
-            - message: folder field cannot be set when folderUID or folderRef is already
-                declared
-              rule: (has(self.folder) && !(has(self.folderRef) || has(self.folderUID)))
-                || !(has(self.folder))
+            - message: spec.uid is immutable
+              rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
+                has(self.uid)))
+            - message: disabling spec.allowCrossNamespaceImport requires a recreate
+                to ensure desired state
+              rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
+                && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaDashboardStatus defines the observed state of GrafanaDashboard
+            description: GrafanaLibraryPanelStatus defines the observed state of GrafanaLibraryPanel
             properties:
-              NoMatchingInstances:
-                description: The dashboard instanceSelector can't find matching grafana
-                  instances
-                type: boolean
               conditions:
+                description: Results when synchonizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -472,12 +481,15 @@ spec:
               hash:
                 type: string
               lastResync:
-                description: Last time the dashboard was resynced
+                description: Last time the resource was synchronized with Grafana
+                  instances
                 format: date-time
                 type: string
               uid:
                 type: string
             type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
