--- a/crds/grafana-operator/v5.17.0.grafana.integreatly.org_grafanamutetimings.yaml
+++ b/crds/grafana-operator/v5.17.0.grafana.integreatly.org_grafanamutetimings.yaml
@@ -4,23 +4,30 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafanaalertrulegroups.grafana.integreatly.org
+  name: grafanamutetimings.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaAlertRuleGroup
-    listKind: GrafanaAlertRuleGroupList
-    plural: grafanaalertrulegroups
-    singular: grafanaalertrulegroup
+    kind: GrafanaMuteTiming
+    listKind: GrafanaMuteTimingList
+    plural: grafanamutetimings
+    singular: grafanamutetiming
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - format: date-time
+      jsonPath: .status.lastResync
+      name: Last resync
+      type: date
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaAlertRuleGroup is the Schema for the grafanaalertrulegroups
-          API
+        description: GrafanaMuteTiming is the Schema for the GrafanaMuteTiming API
         properties:
           apiVersion:
             description: |-
@@ -40,20 +47,23 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaAlertRuleGroupSpec defines the desired state of GrafanaAlertRuleGroup
+            description: GrafanaMuteTimingSpec defines the desired state of GrafanaMuteTiming
             properties:
               allowCrossNamespaceImport:
+                default: false
+                description: Allow the Operator to match this resource with Grafanas
+                  outside the current namespace
                 type: boolean
-              folderRef:
-                description: Match GrafanaFolders CRs to infer the uid
-                type: string
-              folderUID:
-                description: |-
-                  UID of the folder containing this rule group
-                  Overrides the FolderSelector
-                type: string
+              editable:
+                default: true
+                description: Whether to enable or disable editing of the mute timing
+                  in Grafana UI
+                type: boolean
+                x-kubernetes-validations:
+                - message: spec.editable is immutable
+                  rule: self == oldSelf
               instanceSelector:
-                description: selects Grafanas for import
+                description: Selects Grafana instances for import
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -99,140 +109,89 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
                 x-kubernetes-validations:
-                - message: Value is immutable
+                - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              interval:
-                format: duration
-                pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+              name:
+                description: A unique name for the mute timing
                 type: string
               resyncPeriod:
-                default: 10m
+                default: 10m0s
+                description: How often the resource is synced, defaults to 10m0s if
+                  not set
                 format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              rules:
+              time_intervals:
+                description: Time intervals for muting
                 items:
-                  description: AlertRule defines a specific rule to be evaluated.
-                    It is based on the upstream model with some k8s specific type
-                    mappings
                   properties:
-                    annotations:
-                      additionalProperties:
+                    days_of_month:
+                      description: |-
+                        The date 1-31 of a month. Negative values can also be used to represent days that begin at the end of the month.
+                        For example: -1 for the last day of the month.
+                      items:
                         type: string
-                      type: object
-                    condition:
+                      type: array
+                    location:
+                      description: Depending on the location, the time range is displayed
+                        in local time.
                       type: string
-                    data:
+                    months:
+                      description: |-
+                        The months of the year in either numerical or the full calendar month.
+                        For example: 1, may.
+                      items:
+                        type: string
+                      type: array
+                    times:
+                      description: The time inclusive of the start and exclusive of
+                        the end time (in UTC if no location has been selected, otherwise
+                        local time).
                       items:
                         properties:
-                          datasourceUid:
-                            description: Grafana data source unique identifier; it
-                              should be '__expr__' for a Server Side Expression operation.
+                          end_time:
+                            description: end time
                             type: string
-                          model:
-                            description: JSON is the raw JSON query and includes the
-                              above properties as well as custom properties.
-                            x-kubernetes-preserve-unknown-fields: true
-                          queryType:
-                            description: |-
-                              QueryType is an optional identifier for the type of query.
-                              It can be used to distinguish different types of queries.
+                          start_time:
+                            description: start time
                             type: string
-                          refId:
-                            description: RefID is the unique identifier of the query,
-                              set by the frontend call.
-                            type: string
-                          relativeTimeRange:
-                            description: relative time range
-                            properties:
-                              from:
-                                description: from
-                                format: int64
-                                type: integer
-                              to:
-                                description: to
-                                format: int64
-                                type: integer
-                            type: object
+                        required:
+                        - end_time
+                        - start_time
                         type: object
                       type: array
-                    execErrState:
-                      enum:
-                      - OK
-                      - Alerting
-                      - Error
-                      - KeepLast
-                      type: string
-                    for:
-                      format: duration
-                      pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
-                      type: string
-                    isPaused:
-                      type: boolean
-                    labels:
-                      additionalProperties:
+                    weekdays:
+                      description: |-
+                        The day or range of days of the week.
+                        For example: monday, thursday
+                      items:
                         type: string
-                      type: object
-                    noDataState:
-                      enum:
-                      - Alerting
-                      - NoData
-                      - OK
-                      - KeepLast
-                      type: string
-                    notificationSettings:
-                      properties:
-                        group_by:
-                          items:
-                            type: string
-                          type: array
-                        group_interval:
-                          type: string
-                        group_wait:
-                          type: string
-                        mute_time_intervals:
-                          items:
-                            type: string
-                          type: array
-                        receiver:
-                          type: string
-                        repeat_interval:
-                          type: string
-                      required:
-                      - receiver
-                      type: object
-                    title:
-                      example: Always firing
-                      maxLength: 190
-                      minLength: 1
-                      type: string
-                    uid:
-                      pattern: ^[a-zA-Z0-9-_]+$
-                      type: string
-                  required:
-                  - condition
-                  - data
-                  - execErrState
-                  - for
-                  - noDataState
-                  - title
-                  - uid
+                      type: array
+                    years:
+                      description: |-
+                        The year or years for the interval.
+                        For example: 2021
+                      items:
+                        type: string
+                      type: array
                   type: object
+                minItems: 1
                 type: array
             required:
             - instanceSelector
-            - interval
-            - rules
+            - name
+            - time_intervals
             type: object
             x-kubernetes-validations:
-            - message: Only one of FolderUID or FolderRef can be set
-              rule: (has(self.folderUID) && !(has(self.folderRef))) || (has(self.folderRef)
-                && !(has(self.folderUID)))
+            - message: disabling spec.allowCrossNamespaceImport requires a recreate
+                to ensure desired state
+              rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
+                && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaAlertRuleGroupStatus defines the observed state of
-              GrafanaAlertRuleGroup
+            description: The most recent observed state of a Grafana resource
             properties:
               conditions:
+                description: Results when synchonizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -288,9 +247,14 @@ spec:
                   - type
                   type: object
                 type: array
-            required:
-            - conditions
+              lastResync:
+                description: Last time the resource was synchronized with Grafana
+                  instances
+                format: date-time
+                type: string
             type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
