--- a/crds/grafana-operator/v5.17.0.grafana.integreatly.org_grafananotificationtemplates.yaml
+++ b/crds/grafana-operator/v5.17.0.grafana.integreatly.org_grafananotificationtemplates.yaml
@@ -4,29 +4,31 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafanafolders.grafana.integreatly.org
+  name: grafananotificationtemplates.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaFolder
-    listKind: GrafanaFolderList
-    plural: grafanafolders
-    singular: grafanafolder
+    kind: GrafanaNotificationTemplate
+    listKind: GrafanaNotificationTemplateList
+    plural: grafananotificationtemplates
+    singular: grafananotificationtemplate
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.NoMatchingInstances
-      name: No matching instances
-      type: boolean
+    - format: date-time
+      jsonPath: .status.lastResync
+      name: Last resync
+      type: date
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaFolder is the Schema for the grafanafolders API
+        description: GrafanaNotificationTemplate is the Schema for the GrafanaNotificationTemplate
+          API
         properties:
           apiVersion:
             description: |-
@@ -46,14 +48,23 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaFolderSpec defines the desired state of GrafanaFolder
+            description: GrafanaNotificationTemplateSpec defines the desired state
+              of GrafanaNotificationTemplate
             properties:
               allowCrossNamespaceImport:
-                description: allow to import this resources from an operator in a
-                  different namespace
+                default: false
+                description: Allow the Operator to match this resource with Grafanas
+                  outside the current namespace
                 type: boolean
+              editable:
+                description: Whether to enable or disable editing of the notification
+                  template in Grafana UI
+                type: boolean
+                x-kubernetes-validations:
+                - message: spec.editable is immutable
+                  rule: self == oldSelf
               instanceSelector:
-                description: selects Grafanas for import
+                description: Selects Grafana instances for import
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
@@ -99,44 +110,38 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
                 x-kubernetes-validations:
-                - message: Value is immutable
+                - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              parentFolderRef:
-                description: Reference to an existing GrafanaFolder CR in the same
-                  namespace
-                type: string
-              parentFolderUID:
-                description: UID of the folder in which the current folder should
-                  be created
-                type: string
-              permissions:
-                description: raw json with folder permissions
+              name:
+                description: Template name
                 type: string
               resyncPeriod:
-                default: 5m
-                description: how often the folder is synced, defaults to 5m if not
-                  set
+                default: 10m0s
+                description: How often the resource is synced, defaults to 10m0s if
+                  not set
                 format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              title:
+              template:
+                description: Template content
                 type: string
             required:
             - instanceSelector
+            - name
             type: object
             x-kubernetes-validations:
-            - message: Only one of parentFolderUID or parentFolderRef can be set
-              rule: (has(self.parentFolderUID) && !(has(self.parentFolderRef))) ||
-                (has(self.parentFolderRef) && !(has(self.parentFolderUID))) || !(has(self.parentFolderRef)
-                && (has(self.parentFolderUID)))
+            - message: spec.editable is immutable
+              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
+                && has(self.editable)))
+            - message: disabling spec.allowCrossNamespaceImport requires a recreate
+                to ensure desired state
+              rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
+                && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaFolderStatus defines the observed state of GrafanaFolder
+            description: The most recent observed state of a Grafana resource
             properties:
-              NoMatchingInstances:
-                description: The folder instanceSelector can't find matching grafana
-                  instances
-                type: boolean
               conditions:
+                description: Results when synchonizing resource with Grafana instances
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -192,16 +197,14 @@ spec:
                   - type
                   type: object
                 type: array
-              hash:
-                description: |-
-                  INSERT ADDITIONAL STATUS FIELD - define observed state of cluster
-                  Important: Run "make" to regenerate code after modifying this file
-                type: string
               lastResync:
-                description: Last time the folder was resynced
+                description: Last time the resource was synchronized with Grafana
+                  instances
                 format: date-time
                 type: string
             type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
