--- a/charts/chart_deps/prometheus/prometheus-operated/values.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/values.yaml
@@ -114,7 +114,7 @@ prometheus:
 
     image: "quay.io/prometheus/prometheus:v2.54.1"
 
-    version: "v2.54.1"
+    version: "v2.54.1" #3.2.1
 
     imagePullPolicy: IfNotPresent
 
